👌 IMPROVE: Enhanced JWT Token Provider and fixed its issues